[package]
name = "bf-compiler"
version = "0.1.0"
authors = ["ejaszczuk <emj1054@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = { version = "2.33.3" }

